tests/snapshots/run_wpt_conformance__coreml_cast_int32_4D_tensor_to_int8.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
cast.https.any.js cast int32 4D tensor to int8, coreml
 cast :: cast int32 4D tensor to int8: index 0: actual=0 expected=45 tolerance=0
  inputs: castInput: [45, 55, 11, 21, 78, 104, 102, 66, 41, 110, 92, 69, 48, 23, 58, 12, 33, 24, 101, 87, 49, 118, 1, 77]
  expected castOutput: [45, 55, 11, 21, 78, 104, 102, 66, 41, 110 ...] (len=24)
  actual castOutput: [0, 0, 52, 66, 0, 0, 92, 66, 0, 0 ...] (len=24)
  expected castOutput full nd:
[45, 55, 11, 21, 78, 104, 102, 66, 41, 110, ...] (len=24, shape=[2, 2, 2, 3])
  actual castOutput full nd:
[0, 0, 52, 66, 0, 0, 92, 66, 0, 0, ...] (len=24, shape=[2, 2, 2, 3])

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    castInput: i32[2, 2, 2, 3];
  }

  nodes {
    [castOutput] = cast(castInput, label="");
  }

  outputs { castOutput; }
}
