tests/snapshots/run_wpt_conformance__coreml_cast_int32_4D_tensor_to_uint8.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
cast.https.any.js cast int32 4D tensor to uint8, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type cast: Specified dtype of cast does not match that of output tensor.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    castInput: i32[2, 2, 2, 3];
  }

  nodes {
    [castOutput] = cast(castInput, label="");
  }

  outputs { castOutput; }
}
