tests/snapshots/run_wpt_conformance__coreml_cast_int8_0D_constant_tensor_to_int32.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "cast.https.any.js",
    "cast int8 0D constant tensor to int32",
    "coreml",
    "PASS",
)
